Refactor HexTLV Parser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41826

--- a/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
@@ -52,6 +52,7 @@
     <Compile Include="HexTLV2\FieldParsers\StringParser.cs" />
     <Compile Include="HexTLV2\FieldParsers\BCDNumberParser.cs" />
     <Compile Include="HexTLV2\FieldParsers\TBCDNumberParser.cs" />
+    <Compile Include="HexTLV2\FieldParsers\TimeParser.cs" />
     <Compile Include="HexTLV2\RecordParsers\CreateRecordRecordParser.cs" />
     <Compile Include="HexTLV2\RecordParsers\ExecuteTemplateRecordParser.cs" />
     <Compile Include="HexTLV2\RecordParsers\SplitByTagRecordParser.cs" />
