Refactored the GenerateInvoice method to add any billing transactions created by an invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41835

--- a/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
@@ -43,6 +43,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.AccountBalance.Data">
+      <HintPath>..\Output\Vanrise.AccountBalance.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.AccountBalance.Data.SQL">
+      <HintPath>..\Output\Vanrise.AccountBalance.Data.SQL.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.AccountBalance.Entities">
+      <HintPath>..\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingPeriodInfoDataManager.cs" />
