Add CompositeFieldsParser, Refactor DataParser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41849

--- a/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompositeFieldsParser.cs" />
     <Compile Include="HexTLV2\HexTLVFieldParser.cs" />
     <Compile Include="HexTLV2\HexTLVFieldParserCollection.cs" />
     <Compile Include="HexTLV2\HexTLVRecordParser.cs" />
