--- a/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
@@ -43,15 +43,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.AccountBalance.Data">
-      <HintPath>..\Output\Vanrise.AccountBalance.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.AccountBalance.Data.SQL">
-      <HintPath>..\Output\Vanrise.AccountBalance.Data.SQL.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.AccountBalance.Entities">
-      <HintPath>..\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingPeriodInfoDataManager.cs" />
@@ -65,6 +56,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.AccountBalance.Data.SQL\Vanrise.AccountBalance.Data.SQL.csproj">
+      <Project>{910441b0-7f5a-42f3-832b-e90e6ac48a85}</Project>
+      <Name>Vanrise.AccountBalance.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.AccountBalance.Data\Vanrise.AccountBalance.Data.csproj">
+      <Project>{b965ecbb-a97f-4b6e-822b-09312422376b}</Project>
+      <Name>Vanrise.AccountBalance.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.AccountBalance.Entities\Vanrise.AccountBalance.Entities.csproj">
+      <Project>{5111e97a-c9ab-4bef-8f75-32cc46526074}</Project>
+      <Name>Vanrise.AccountBalance.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
       <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
       <Name>Vanrise.Common</Name>
