Adding CheckRetroActiveBeforeDate activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41864

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Activities/TOne.WhS.Deal.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Activities/TOne.WhS.Deal.BP.Activities.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculateBeginDate.cs" />
+    <Compile Include="CheckRetroActiveBeforeDate.cs" />
     <Compile Include="CompareCurrentToExpectedDealRecords.cs" />
     <Compile Include="LoadDealBillingSummaryRecords.cs" />
     <Compile Include="PrepareExpectedDealBillingSummaryRecords.cs" />
