--- a/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
+++ b/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
@@ -143,6 +143,12 @@
     <Content Include="Retail_MultiNet\Directives\Account\Part\Definition\Templates\AccountTypePartBranchExtendedInfoDefinitionTemplate.html" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Runtime\retail-multinet-accounttype-part-runtime-branchextendedinfo.js" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Runtime\Templates\AccountTypePartBranchExtendedInfoRuntimeTemplate.html" />
+    <Content Include="Retail_MultiNet\Directives\Branche\retail-multinet-branche-convertor-editor.js" />
+    <Content Include="Retail_MultiNet\Directives\Branche\Templates\BrancheConvertorEditor.html" />
+    <Content Include="Retail_MultiNet\Directives\Subscriber\retail-multinet-subscriber-convertor-editor.js" />
+    <Content Include="Retail_MultiNet\Directives\Subscriber\Templates\SubscriberConvertorEditor.html" />
+    <Content Include="Retail_MultiNet\Directives\Company\retail-multinet-company-convertor-editor.js" />
+    <Content Include="Retail_MultiNet\Directives\Company\Templates\CompanyConvertorEditor.html" />
     <Content Include="Retail_MultiNet\Directives\AddressType\retail-multinet-addresstype-selector.js" />
     <Content Include="Retail_MultiNet\Directives\AccountType\retail-multinet-accounttype-selector.js" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Definition\retail-multinet-accounttype-part-definition-companyextendedinfo.js" />
