Throwing Authentication Error @ITestZoneManager.GetAllZones()
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41893

--- a/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
+++ b/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
@@ -60,11 +60,17 @@
     <add key="QM_CLITester_DBConnStringKey"                     value="QMConnString"/>
 
     <!--Testing Profile-->
-    <add key="ConnectorEmail" value="WYtp0l4OqaBUNquwGoGhztgUI8jFe5CRaNrzLrr3ESU=" />
+    <!--Protel-->
+    <!--<add key="ConnectorEmail" value="WYtp0l4OqaBUNquwGoGhztgUI8jFe5CRaNrzLrr3ESU=" />
     <add key="ConnectorPassword" value="XBJnXe8lZBfUxP9BpalLAg==" />
     <add key="ConnectorUrl" value="dCw8OSmS14MSHGcMFrmxOG+9zd0qm3XhUBY0lfvvRhM=" />
+    <add key="ConnectorUrlBeta" value="CLGo9vEUBAsD1kNHD/qrtA8bJdRl0NWvy8UeHVvKRjg=" />-->
+
+    <!--Sama-->
+    <add key="ConnectorEmail" value="AhxkeopAGtDvXwLqP9NK/gYo1xPk4CFBzfAbLkMqH8A=" />
+    <add key="ConnectorPassword" value="WSZCkE2SkDKSst3TB5OAmQ==" />
+    <add key="ConnectorUrl" value="dCw8OSmS14MSHGcMFrmxOG+9zd0qm3XhUBY0lfvvRhM=" />
     <add key="ConnectorUrlBeta" value="CLGo9vEUBAsD1kNHD/qrtA8bJdRl0NWvy8UeHVvKRjg=" />
-    
     
     <!--Sama Profile-->
     <!--<add key="ConnectorEmail" value="AhxkeopAGtDvXwLqP9NK/gYo1xPk4CFBzfAbLkMqH8A=" />
