Finalize AlertRuleType overridenConfiguration directive implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41896

--- a/Vanrise/Code/Vanrise.Notification.Web/Vanrise.Notification.Web.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Web/Vanrise.Notification.Web.csproj
@@ -175,8 +175,10 @@
     <Content Include="VR_Notification\Directives\VRAlertRuleType\Templates\VRAlertRuleTypeGridTemplate.html" />
     <Content Include="VR_Notification\Directives\VRAlertRuleType\vr-notification-alertruletype-selector.js" />
     <Content Include="VR_Notification\Directives\VRAlertRuleType\vr-notification-alertruletype-grid.js" />
+    <Content Include="VR_Notification\Directives\VRAlertRule\Templates\OverriddenAlertRuleTypeDefinition.html" />
     <Content Include="VR_Notification\Directives\VRAlertRule\Templates\VRAlertRuleGridTemplate.html" />
     <Content Include="VR_Notification\Directives\MainExtensions\VRBalanceAlertRule\Templates\VRBalanceAlertRuleSettingsTemplate.html" />
+    <Content Include="VR_Notification\Directives\VRAlertRule\vr-notification-overriddenconfiguration-alertruletype.js" />
     <Content Include="VR_Notification\Directives\VRAlertRule\vr-notification-vralertrule-grid.js" />
     <Content Include="VR_Notification\Directives\MainExtensions\VRBalanceAlertRule\vr-notification-vrbalancealertrule-settings.js" />
     <Content Include="VR_Notification\Directives\VRBalanceAlertRule\ProcessInput\Normal\Templates\BalanceAlertThresholdProcessManualTemplate.html" />
