implementing the loking on process in supplier price list
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41910

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
@@ -160,6 +160,7 @@
     <Content Include="WhS_SupplierPriceList\Constant\PreviewChangeTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\RateChangeTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\CodeChangeTypeEnum.js" />
+    <Content Include="WhS_SupplierPriceList\Constant\SPLDefintionEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\SupplierPriceListType.js" />
     <Content Include="WhS_SupplierPriceList\Constant\ZoneServicesChangeTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\ZoneChangeTypeEnum.js" />
