added SplitByOffSetRecordParser and related
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41932

--- a/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
@@ -44,21 +44,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeFieldParsers\DateTimeCompositeParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\BoolFieldParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\CallLocationInformationParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\CoordinatesParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\DateTimeParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\HexaParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\NumberFieldParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\IPv4Parser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\SequenceFieldParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\StringParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\BCDNumberParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\TBCDNumberParser.cs" />
-    <Compile Include="HexTLV2\FieldParsers\TimeParser.cs" />
-    <Compile Include="HexTLV2\RecordParsers\CreateRecordRecordParser.cs" />
-    <Compile Include="HexTLV2\RecordParsers\ExecuteTemplateRecordParser.cs" />
-    <Compile Include="HexTLV2\RecordParsers\SplitByTagRecordParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\BoolFieldParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\CallLocationInformationParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\CoordinatesParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\DateTimeParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\HexaParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\NumberFieldParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\IPv4Parser.cs" />
+    <Compile Include="HexTLV\FieldParsers\SequenceFieldParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\StringParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\BCDNumberParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\TBCDNumberParser.cs" />
+    <Compile Include="HexTLV\FieldParsers\TimeParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\CreateRecordRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\ExecuteTemplateRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\PositionedFieldsRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\SplitByOffSetRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\SplitByPositionedTypeRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\SplitByTagRecordParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
