--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -102,6 +102,7 @@
     <Compile Include="RateManagement\Actions\Service\SaleZoneServiceToAdd.cs" />
     <Compile Include="RateManagement\Actions\Service\SaleZoneServiceToClose.cs" />
     <Compile Include="RateManagement\Country\ChangedCountry.cs" />
+    <Compile Include="RateManagement\Country\CountryData.cs" />
     <Compile Include="RateManagement\Country\ExistingCustomerCountry.cs" />
     <Compile Include="RateManagement\Country\IProcessCustomerCountriesContext.cs" />
     <Compile Include="RateManagement\Country\NewCustomerCountry.cs" />
