Update Positioned Field Parser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41938

--- a/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ParserType\ParserTypeDetail.cs" />
     <Compile Include="ParserType\ParserTypeExtendedSettingsConfig.cs" />
     <Compile Include="ParserType\ParserTypeQuery.cs" />
+    <Compile Include="PositionedFieldParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
