Add Multi Net DID Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41958

--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <Compile Include="Convertors\BranchConvertor.cs" />
     <Compile Include="Convertors\CompanyConvertor.cs" />
+    <Compile Include="Convertors\DIDConvertor.cs" />
     <Compile Include="Convertors\SubscriberConvertor.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfo.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfoDefinition.cs" />
