--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Vanrise.Reprocess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Vanrise.Reprocess.Web.csproj
@@ -149,6 +149,7 @@
     <Content Include="Reprocess\Directives\ReprocessDefinition\Templates\ReprocessDefinitionGridTemplate.html" />
     <Content Include="Reprocess\Directives\ReprocessInput\reprocess-reprocessprocess.js" />
     <Content Include="Reprocess\Directives\ReprocessInput\Templates\ReprocessProcessTemplate.html" />
+    <Content Include="Reprocess\Directives\ScheduleTask\reprocess-chunktime-selector.js" />
     <Content Include="Reprocess\Directives\ScheduleTask\reprocess-reprocessprocesstask.js" />
     <Content Include="Reprocess\Directives\ScheduleTask\Templates\ReprocessProcessTaskTemplate.html" />
     <Content Include="Reprocess\ModuleInitialization.js" />
