Implementing teles site provision
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41979

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -213,6 +213,7 @@
     <Content Include="Retail_BusinessEntity\Constant\DIDNumberTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\FinancialAccountEffectiveEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\PeriodicRecurringChargePeriodTypeEnum.js" />
+    <Content Include="Retail_BusinessEntity\Constant\TagetTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\TrafficDirectionEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\ChargeTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\ConnectionTypeEnum.js" />
