--- a/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
+++ b/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
@@ -49,7 +49,9 @@
   <ItemGroup>
     <Compile Include="EnterpriseAccountMappingInfo.cs" />
     <Compile Include="ITelesEnterpriseFilter.cs" />
+    <Compile Include="ITelesEnterpriseSiteFilter.cs" />
     <Compile Include="MapEnterpriseToAccountInput.cs" />
+    <Compile Include="MapSiteToAccountInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provisioning\ChangeUsersRGs\ChangeUsersRGsAccountState.cs" />
     <Compile Include="RoutingGroupCondition.cs" />
@@ -57,6 +59,8 @@
     <Compile Include="SiteAccountMappingInfo.cs" />
     <Compile Include="TelesEnterpriseFilter.cs" />
     <Compile Include="TelesEnterpriseInfo.cs" />
+    <Compile Include="TelesEnterpriseSiteFilter.cs" />
+    <Compile Include="TelesEnterpriseSiteInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Retail.BusinessEntity.Entities\Retail.BusinessEntity.Entities.csproj">
